--- a/src/main/vfs/sites/default/express-news/.content/.templates/express-news-template.html
+++ b/src/main/vfs/sites/default/express-news/.content/.templates/express-news-template.html
@@ -3,71 +3,123 @@
 <AlkaconContainerPages xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="opencms://system/modules/org.opencms.ade.containerpage/schemas/container_page.xsd">
   <AlkaconContainerPage language="en">
     <Containers>
-      <Name><![CDATA[9ca39a6c-4140-11e8-b070-e5c82a707ed0-leftsidebar]]></Name>
-      <Type><![CDATA[express-news-left-sidebar]]></Type>
-      <ParentInstanceId><![CDATA[9ca39a6c-4140-11e8-b070-e5c82a707ed0]]></ParentInstanceId>
+      <Name><![CDATA[415b722a-47b3-11e8-a806-e5c82a707ed0-contentleftcontainer]]></Name>
+      <Type><![CDATA[express-news-content]]></Type>
+      <ParentInstanceId><![CDATA[415b722a-47b3-11e8-a806-e5c82a707ed0]]></ParentInstanceId>
       <Elements>
         <Uri>
           <link type="STRONG">
-            <target><![CDATA[/sites/default/express-news/.content/share/share-00001.xml]]></target>
-            <uuid>556d77fc-4140-11e8-b070-e5c82a707ed0</uuid>
+            <target><![CDATA[/sites/default/express-news/.content/slider/slider-00001.xml]]></target>
+            <uuid>c6e9f3f7-47af-11e8-a806-e5c82a707ed0</uuid>
           </link>
         </Uri>
         <Formatter>
           <link type="STRONG">
-            <target><![CDATA[/system/modules/com.my.express.news/formatters/share-formatter.jsp]]></target>
-            <uuid>c49058d1-3329-11e8-b79b-e5c82a707ed0</uuid>
+            <target><![CDATA[/system/modules/com.my.express.news/formatters/slider-formatter.jsp]]></target>
+            <uuid>583754ae-330e-11e8-b78e-e5c82a707ed0</uuid>
           </link>
         </Formatter>
         <Properties>
           <Name><![CDATA[element_instance_id]]></Name>
           <Value>
-            <String><![CDATA[ac008e5d-4140-11e8-b070-e5c82a707ed0]]></String>
+            <String><![CDATA[80af4bc1-47b3-11e8-a806-e5c82a707ed0]]></String>
           </Value>
         </Properties>
         <Properties>
-          <Name><![CDATA[formatterSettings#9ca39a6c-4140-11e8-b070-e5c82a707ed0-leftsidebar]]></Name>
+          <Name><![CDATA[formatterSettings#415b722a-47b3-11e8-a806-e5c82a707ed0-contentleftcontainer]]></Name>
           <Value>
-            <String><![CDATA[c4942964-3329-11e8-b79b-e5c82a707ed0]]></String>
+            <String><![CDATA[583ad721-330e-11e8-b78e-e5c82a707ed0]]></String>
+          </Value>
+        </Properties>
+      </Elements>
+      <Elements>
+        <Uri>
+          <link type="STRONG">
+            <target><![CDATA[/sites/default/express-news/.content/large-article-list/large-article-list-00001.xml]]></target>
+            <uuid>c694cef3-47af-11e8-a806-e5c82a707ed0</uuid>
+          </link>
+        </Uri>
+        <Formatter>
+          <link type="STRONG">
+            <target><![CDATA[/system/modules/com.my.express.news/formatters/large-article-list-formatter.jsp]]></target>
+            <uuid>0d723f90-333e-11e8-853f-e5c82a707ed0</uuid>
+          </link>
+        </Formatter>
+        <Properties>
+          <Name><![CDATA[element_instance_id]]></Name>
+          <Value>
+            <String><![CDATA[887b9a72-47b3-11e8-a806-e5c82a707ed0]]></String>
+          </Value>
+        </Properties>
+        <Properties>
+          <Name><![CDATA[formatterSettings#415b722a-47b3-11e8-a806-e5c82a707ed0-contentleftcontainer]]></Name>
+          <Value>
+            <String><![CDATA[0d7af223-333e-11e8-853f-e5c82a707ed0]]></String>
+          </Value>
+        </Properties>
+      </Elements>
+      <Elements>
+        <Uri>
+          <link type="STRONG">
+            <target><![CDATA[/sites/default/express-news/.content/medium-article-list/medium-article-list-00001.xml]]></target>
+            <uuid>c6add53f-47af-11e8-a806-e5c82a707ed0</uuid>
+          </link>
+        </Uri>
+        <Formatter>
+          <link type="STRONG">
+            <target><![CDATA[/system/modules/com.my.express.news/formatters/medium-article-list-formatter.jsp]]></target>
+            <uuid>27c4e333-3bc9-11e8-9ea4-e5c82a707ed0</uuid>
+          </link>
+        </Formatter>
+        <Properties>
+          <Name><![CDATA[element_instance_id]]></Name>
+          <Value>
+            <String><![CDATA[9d3081b6-47b3-11e8-a806-e5c82a707ed0]]></String>
+          </Value>
+        </Properties>
+        <Properties>
+          <Name><![CDATA[formatterSettings#415b722a-47b3-11e8-a806-e5c82a707ed0-contentleftcontainer]]></Name>
+          <Value>
+            <String><![CDATA[269da141-3bc9-11e8-9ea4-e5c82a707ed0]]></String>
+          </Value>
+        </Properties>
+      </Elements>
+      <Elements>
+        <Uri>
+          <link type="STRONG">
+            <target><![CDATA[/sites/default/express-news/.content/dual-small-article-list/dual-small-article-list-00001.xml]]></target>
+            <uuid>c6825855-47af-11e8-a806-e5c82a707ed0</uuid>
+          </link>
+        </Uri>
+        <Formatter>
+          <link type="STRONG">
+            <target><![CDATA[/system/modules/com.my.express.news/formatters/dual-small-article-list-formatter.jsp]]></target>
+            <uuid>eb67bd38-3f09-11e8-90fa-e5c82a707ed0</uuid>
+          </link>
+        </Formatter>
+        <Properties>
+          <Name><![CDATA[element_instance_id]]></Name>
+          <Value>
+            <String><![CDATA[a3191c49-47b3-11e8-a806-e5c82a707ed0]]></String>
+          </Value>
+        </Properties>
+        <Properties>
+          <Name><![CDATA[formatterSettings#415b722a-47b3-11e8-a806-e5c82a707ed0-contentleftcontainer]]></Name>
+          <Value>
+            <String><![CDATA[ec82ca2b-3f09-11e8-90fa-e5c82a707ed0]]></String>
           </Value>
         </Properties>
       </Elements>
     </Containers>
     <Containers>
-      <Name><![CDATA[9ca39a6c-4140-11e8-b070-e5c82a707ed0-sidebarfirsthalfcontainer]]></Name>
+      <Name><![CDATA[415b722a-47b3-11e8-a806-e5c82a707ed0-sidebarfirsthalfcontainer]]></Name>
       <Type><![CDATA[express-news-right-sidebar]]></Type>
-      <ParentInstanceId><![CDATA[9ca39a6c-4140-11e8-b070-e5c82a707ed0]]></ParentInstanceId>
-      <Elements>
-        <Uri>
-          <link type="STRONG">
-            <target><![CDATA[/sites/default/express-news/.content/categories/categories-00001.xml]]></target>
-            <uuid>2f2f4029-4143-11e8-b1cb-e5c82a707ed0</uuid>
-          </link>
-        </Uri>
-        <Formatter>
-          <link type="STRONG">
-            <target><![CDATA[/system/modules/com.my.express.news/formatters/categories-formatter.jsp]]></target>
-            <uuid>cdf62e5a-4142-11e8-b1cb-e5c82a707ed0</uuid>
-          </link>
-        </Formatter>
-        <Properties>
-          <Name><![CDATA[element_instance_id]]></Name>
-          <Value>
-            <String><![CDATA[2cd65c06-4143-11e8-b1cb-e5c82a707ed0]]></String>
-          </Value>
-        </Properties>
-        <Properties>
-          <Name><![CDATA[formatterSettings#9ca39a6c-4140-11e8-b070-e5c82a707ed0-sidebarfirsthalfcontainer]]></Name>
-          <Value>
-            <String><![CDATA[cf0bbd0d-4142-11e8-b1cb-e5c82a707ed0]]></String>
-          </Value>
-        </Properties>
-      </Elements>
+      <ParentInstanceId><![CDATA[415b722a-47b3-11e8-a806-e5c82a707ed0]]></ParentInstanceId>
       <Elements>
         <Uri>
           <link type="STRONG">
             <target><![CDATA[/sites/default/express-news/.content/sign-up-form/sign-up-form-00001.xml]]></target>
-            <uuid>47d16346-3313-11e8-8f1f-e5c82a707ed0</uuid>
+            <uuid>c6e008e3-47af-11e8-a806-e5c82a707ed0</uuid>
           </link>
         </Uri>
         <Formatter>
@@ -79,11 +131,11 @@
         <Properties>
           <Name><![CDATA[element_instance_id]]></Name>
           <Value>
-            <String><![CDATA[b99608c2-4140-11e8-b070-e5c82a707ed0]]></String>
+            <String><![CDATA[ae2330ee-47b3-11e8-a806-e5c82a707ed0]]></String>
           </Value>
         </Properties>
         <Properties>
-          <Name><![CDATA[formatterSettings#9ca39a6c-4140-11e8-b070-e5c82a707ed0-sidebarfirsthalfcontainer]]></Name>
+          <Name><![CDATA[formatterSettings#415b722a-47b3-11e8-a806-e5c82a707ed0-sidebarfirsthalfcontainer]]></Name>
           <Value>
             <String><![CDATA[43130aab-330e-11e8-b78e-e5c82a707ed0]]></String>
           </Value>
@@ -93,7 +145,7 @@
         <Uri>
           <link type="STRONG">
             <target><![CDATA[/sites/default/express-news/.content/accordation-menu/accordation-menu-00001.xml]]></target>
-            <uuid>db5117b0-3313-11e8-8f1f-e5c82a707ed0</uuid>
+            <uuid>c60efced-47af-11e8-a806-e5c82a707ed0</uuid>
           </link>
         </Uri>
         <Formatter>
@@ -105,11 +157,11 @@
         <Properties>
           <Name><![CDATA[element_instance_id]]></Name>
           <Value>
-            <String><![CDATA[bf0a36a3-4140-11e8-b070-e5c82a707ed0]]></String>
+            <String><![CDATA[b334cc6f-47b3-11e8-a806-e5c82a707ed0]]></String>
           </Value>
         </Properties>
         <Properties>
-          <Name><![CDATA[formatterSettings#9ca39a6c-4140-11e8-b070-e5c82a707ed0-sidebarfirsthalfcontainer]]></Name>
+          <Name><![CDATA[formatterSettings#415b722a-47b3-11e8-a806-e5c82a707ed0-sidebarfirsthalfcontainer]]></Name>
           <Value>
             <String><![CDATA[9a711117-330e-11e8-b78e-e5c82a707ed0]]></String>
           </Value>
@@ -117,14 +169,14 @@
       </Elements>
     </Containers>
     <Containers>
-      <Name><![CDATA[9ca39a6c-4140-11e8-b070-e5c82a707ed0-sidebarsecondhalfcontainer]]></Name>
+      <Name><![CDATA[415b722a-47b3-11e8-a806-e5c82a707ed0-sidebarsecondhalfcontainer]]></Name>
       <Type><![CDATA[express-news-right-sidebar]]></Type>
-      <ParentInstanceId><![CDATA[9ca39a6c-4140-11e8-b070-e5c82a707ed0]]></ParentInstanceId>
+      <ParentInstanceId><![CDATA[415b722a-47b3-11e8-a806-e5c82a707ed0]]></ParentInstanceId>
       <Elements>
         <Uri>
           <link type="STRONG">
             <target><![CDATA[/sites/default/express-news/.content/sidebar-article-list/sidebar-article-list-00001.xml]]></target>
-            <uuid>14000d3a-4140-11e8-b070-e5c82a707ed0</uuid>
+            <uuid>c6d5f6bf-47af-11e8-a806-e5c82a707ed0</uuid>
           </link>
         </Uri>
         <Formatter>
@@ -136,11 +188,11 @@
         <Properties>
           <Name><![CDATA[element_instance_id]]></Name>
           <Value>
-            <String><![CDATA[d8b2832c-4140-11e8-b070-e5c82a707ed0]]></String>
+            <String><![CDATA[bba4d538-47b3-11e8-a806-e5c82a707ed0]]></String>
           </Value>
         </Properties>
         <Properties>
-          <Name><![CDATA[formatterSettings#9ca39a6c-4140-11e8-b070-e5c82a707ed0-sidebarsecondhalfcontainer]]></Name>
+          <Name><![CDATA[formatterSettings#415b722a-47b3-11e8-a806-e5c82a707ed0-sidebarsecondhalfcontainer]]></Name>
           <Value>
             <String><![CDATA[dd5cdf93-330e-11e8-b78e-e5c82a707ed0]]></String>
           </Value>
@@ -150,7 +202,7 @@
         <Uri>
           <link type="STRONG">
             <target><![CDATA[/sites/default/express-news/.content/tag/tag-00001.xml]]></target>
-            <uuid>96a5f0db-3314-11e8-8f1f-e5c82a707ed0</uuid>
+            <uuid>c6f3b7fb-47af-11e8-a806-e5c82a707ed0</uuid>
           </link>
         </Uri>
         <Formatter>
@@ -162,11 +214,11 @@
         <Properties>
           <Name><![CDATA[element_instance_id]]></Name>
           <Value>
-            <String><![CDATA[e1c13cf3-4140-11e8-b070-e5c82a707ed0]]></String>
+            <String><![CDATA[c115599d-47b3-11e8-a806-e5c82a707ed0]]></String>
           </Value>
         </Properties>
         <Properties>
-          <Name><![CDATA[formatterSettings#9ca39a6c-4140-11e8-b070-e5c82a707ed0-sidebarsecondhalfcontainer]]></Name>
+          <Name><![CDATA[formatterSettings#415b722a-47b3-11e8-a806-e5c82a707ed0-sidebarsecondhalfcontainer]]></Name>
           <Value>
             <String><![CDATA[926f0f71-3312-11e8-8e45-e5c82a707ed0]]></String>
           </Value>
@@ -176,7 +228,7 @@
         <Uri>
           <link type="STRONG">
             <target><![CDATA[/sites/default/express-news/.content/popular-article-list/popular-article-list-00001.xml]]></target>
-            <uuid>64c1d665-413f-11e8-b070-e5c82a707ed0</uuid>
+            <uuid>c6b77233-47af-11e8-a806-e5c82a707ed0</uuid>
           </link>
         </Uri>
         <Formatter>
@@ -188,11 +240,11 @@
         <Properties>
           <Name><![CDATA[element_instance_id]]></Name>
           <Value>
-            <String><![CDATA[cd5d34b9-4140-11e8-b070-e5c82a707ed0]]></String>
+            <String><![CDATA[c865255c-47b3-11e8-a806-e5c82a707ed0]]></String>
           </Value>
         </Properties>
         <Properties>
-          <Name><![CDATA[formatterSettings#9ca39a6c-4140-11e8-b070-e5c82a707ed0-sidebarsecondhalfcontainer]]></Name>
+          <Name><![CDATA[formatterSettings#415b722a-47b3-11e8-a806-e5c82a707ed0-sidebarsecondhalfcontainer]]></Name>
           <Value>
             <String><![CDATA[c7ec976d-330e-11e8-b78e-e5c82a707ed0]]></String>
           </Value>
@@ -206,26 +258,26 @@
       <Elements>
         <Uri>
           <link type="STRONG">
-            <target><![CDATA[/sites/default/express-news/.content/layout-detail/layout-detail-00001.xml]]></target>
-            <uuid>94da58fa-4140-11e8-b070-e5c82a707ed0</uuid>
+            <target><![CDATA[/sites/default/express-news/.content/layout/layout-00001.xml]]></target>
+            <uuid>c69ac267-47af-11e8-a806-e5c82a707ed0</uuid>
           </link>
         </Uri>
         <Formatter>
           <link type="STRONG">
-            <target><![CDATA[/system/modules/com.my.express.news/formatters/layout-detail-formatter.jsp]]></target>
-            <uuid>561998d7-3323-11e8-b79b-e5c82a707ed0</uuid>
+            <target><![CDATA[/system/modules/com.my.express.news/formatters/layout-formatter.jsp]]></target>
+            <uuid>0b1404e2-330e-11e8-b78e-e5c82a707ed0</uuid>
           </link>
         </Formatter>
         <Properties>
           <Name><![CDATA[element_instance_id]]></Name>
           <Value>
-            <String><![CDATA[9ca39a6c-4140-11e8-b070-e5c82a707ed0]]></String>
+            <String><![CDATA[415b722a-47b3-11e8-a806-e5c82a707ed0]]></String>
           </Value>
         </Properties>
         <Properties>
           <Name><![CDATA[formatterSettings#contentcontainer]]></Name>
           <Value>
-            <String><![CDATA[561b468a-3323-11e8-b79b-e5c82a707ed0]]></String>
+            <String><![CDATA[0b17fc85-330e-11e8-b78e-e5c82a707ed0]]></String>
           </Value>
         </Properties>
       </Elements>
@@ -238,7 +290,7 @@
         <Uri>
           <link type="STRONG">
             <target><![CDATA[/sites/default/express-news/.content/footer/footer-00001.xml]]></target>
-            <uuid>48e7cb15-330a-11e8-b78e-e5c82a707ed0</uuid>
+            <uuid>c6864ff9-47af-11e8-a806-e5c82a707ed0</uuid>
           </link>
         </Uri>
         <Formatter>
@@ -250,7 +302,7 @@
         <Properties>
           <Name><![CDATA[element_instance_id]]></Name>
           <Value>
-            <String><![CDATA[ae4ad06a-330d-11e8-b78e-e5c82a707ed0]]></String>
+            <String><![CDATA[e418a0cd-47b2-11e8-a806-e5c82a707ed0]]></String>
           </Value>
         </Properties>
         <Properties>
@@ -269,7 +321,7 @@
         <Uri>
           <link type="STRONG">
             <target><![CDATA[/sites/default/express-news/.content/header/header-00001.xml]]></target>
-            <uuid>9be45f9f-3308-11e8-94f3-e5c82a707ed0</uuid>
+            <uuid>c68c436d-47af-11e8-a806-e5c82a707ed0</uuid>
           </link>
         </Uri>
         <Formatter>
@@ -281,7 +333,7 @@
         <Properties>
           <Name><![CDATA[element_instance_id]]></Name>
           <Value>
-            <String><![CDATA[b289d9ac-330d-11e8-b78e-e5c82a707ed0]]></String>
+            <String><![CDATA[dca399dc-47b2-11e8-a806-e5c82a707ed0]]></String>
           </Value>
         </Properties>
         <Properties>
