--- a/src/main/vfs/sites/default/express-news/search/index.html
+++ b/src/main/vfs/sites/default/express-news/search/index.html
@@ -3,97 +3,34 @@
 <AlkaconContainerPages xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="opencms://system/modules/org.opencms.ade.containerpage/schemas/container_page.xsd">
   <AlkaconContainerPage language="en">
     <Containers>
+      <Name><![CDATA[4fc692db-4146-11e8-b1cb-e5c82a707ed0-contentleftcontainer]]></Name>
+      <Type><![CDATA[express-news-content]]></Type>
+      <ParentInstanceId><![CDATA[4fc692db-4146-11e8-b1cb-e5c82a707ed0]]></ParentInstanceId>
+    </Containers>
+    <Containers>
+      <Name><![CDATA[4fc692db-4146-11e8-b1cb-e5c82a707ed0-sidebarfirsthalfcontainer]]></Name>
+      <Type><![CDATA[express-news-right-sidebar]]></Type>
+      <ParentInstanceId><![CDATA[4fc692db-4146-11e8-b1cb-e5c82a707ed0]]></ParentInstanceId>
+    </Containers>
+    <Containers>
+      <Name><![CDATA[4fc692db-4146-11e8-b1cb-e5c82a707ed0-sidebarsecondhalfcontainer]]></Name>
+      <Type><![CDATA[express-news-right-sidebar]]></Type>
+      <ParentInstanceId><![CDATA[4fc692db-4146-11e8-b1cb-e5c82a707ed0]]></ParentInstanceId>
+    </Containers>
+    <Containers>
       <Name><![CDATA[contentcontainer]]></Name>
       <Type><![CDATA[express-news-body]]></Type>
       <IsRootContainer>true</IsRootContainer>
-      <Elements>
-        <Uri>
-          <link type="STRONG">
-            <target><![CDATA[/sites/default/express-news/.content/search/search-00001.xml]]></target>
-            <uuid>c1a4a178-43ba-11e8-ad03-e5c82a707ed0</uuid>
-          </link>
-        </Uri>
-        <Formatter>
-          <link type="STRONG">
-            <target><![CDATA[/system/modules/com.my.express.news/formatters/search-formatter.jsp]]></target>
-            <uuid>6219189a-43ba-11e8-ad03-e5c82a707ed0</uuid>
-          </link>
-        </Formatter>
-        <Properties>
-          <Name><![CDATA[element_instance_id]]></Name>
-          <Value>
-            <String><![CDATA[bbcfdd05-43ba-11e8-ad03-e5c82a707ed0]]></String>
-          </Value>
-        </Properties>
-        <Properties>
-          <Name><![CDATA[formatterSettings#contentcontainer]]></Name>
-          <Value>
-            <String><![CDATA[622610ed-43ba-11e8-ad03-e5c82a707ed0]]></String>
-          </Value>
-        </Properties>
-      </Elements>
     </Containers>
     <Containers>
       <Name><![CDATA[footercontainer]]></Name>
       <Type><![CDATA[express-news-footer]]></Type>
       <IsRootContainer>true</IsRootContainer>
-      <Elements>
-        <Uri>
-          <link type="STRONG">
-            <target><![CDATA[/sites/default/express-news/.content/footer/footer-00001.xml]]></target>
-            <uuid>48e7cb15-330a-11e8-b78e-e5c82a707ed0</uuid>
-          </link>
-        </Uri>
-        <Formatter>
-          <link type="STRONG">
-            <target><![CDATA[/system/modules/com.my.express.news/formatters/footer-formatter.jsp]]></target>
-            <uuid>89b7a68f-3304-11e8-b4b1-e5c82a707ed0</uuid>
-          </link>
-        </Formatter>
-        <Properties>
-          <Name><![CDATA[element_instance_id]]></Name>
-          <Value>
-            <String><![CDATA[ae4ad06a-330d-11e8-b78e-e5c82a707ed0]]></String>
-          </Value>
-        </Properties>
-        <Properties>
-          <Name><![CDATA[formatterSettings#footercontainer]]></Name>
-          <Value>
-            <String><![CDATA[89bf47b2-3304-11e8-b4b1-e5c82a707ed0]]></String>
-          </Value>
-        </Properties>
-      </Elements>
     </Containers>
     <Containers>
       <Name><![CDATA[headercontainer]]></Name>
       <Type><![CDATA[express-news-header]]></Type>
       <IsRootContainer>true</IsRootContainer>
-      <Elements>
-        <Uri>
-          <link type="STRONG">
-            <target><![CDATA[/sites/default/express-news/.content/header/header-00001.xml]]></target>
-            <uuid>9be45f9f-3308-11e8-94f3-e5c82a707ed0</uuid>
-          </link>
-        </Uri>
-        <Formatter>
-          <link type="STRONG">
-            <target><![CDATA[/system/modules/com.my.express.news/formatters/header-formatter.jsp]]></target>
-            <uuid>004cf82d-3304-11e8-b4b1-e5c82a707ed0</uuid>
-          </link>
-        </Formatter>
-        <Properties>
-          <Name><![CDATA[element_instance_id]]></Name>
-          <Value>
-            <String><![CDATA[b289d9ac-330d-11e8-b78e-e5c82a707ed0]]></String>
-          </Value>
-        </Properties>
-        <Properties>
-          <Name><![CDATA[formatterSettings#headercontainer]]></Name>
-          <Value>
-            <String><![CDATA[00505390-3304-11e8-b4b1-e5c82a707ed0]]></String>
-          </Value>
-        </Properties>
-      </Elements>
     </Containers>
   </AlkaconContainerPage>
 </AlkaconContainerPages>
