Update contents, layout New UGC User generated content feature from Apollo

--- a/src/main/vfs/sites/default/express-news/index.html
+++ b/src/main/vfs/sites/default/express-news/index.html
@@ -22,7 +22,7 @@
         <Properties>
           <Name><![CDATA[element_instance_id]]></Name>
           <Value>
-            <String><![CDATA[80af4bc1-47b3-11e8-a806-e5c82a707ed0]]></String>
+            <String><![CDATA[32549dd0-5726-11e8-a500-e5c82a707ed0]]></String>
           </Value>
         </Properties>
         <Properties>
@@ -48,7 +48,7 @@
         <Properties>
           <Name><![CDATA[element_instance_id]]></Name>
           <Value>
-            <String><![CDATA[887b9a72-47b3-11e8-a806-e5c82a707ed0]]></String>
+            <String><![CDATA[38ae22a1-5726-11e8-a500-e5c82a707ed0]]></String>
           </Value>
         </Properties>
         <Properties>
@@ -74,7 +74,7 @@
         <Properties>
           <Name><![CDATA[element_instance_id]]></Name>
           <Value>
-            <String><![CDATA[9d3081b6-47b3-11e8-a806-e5c82a707ed0]]></String>
+            <String><![CDATA[408ac505-5726-11e8-a500-e5c82a707ed0]]></String>
           </Value>
         </Properties>
         <Properties>
@@ -100,7 +100,7 @@
         <Properties>
           <Name><![CDATA[element_instance_id]]></Name>
           <Value>
-            <String><![CDATA[a3191c49-47b3-11e8-a806-e5c82a707ed0]]></String>
+            <String><![CDATA[454084ea-5726-11e8-a500-e5c82a707ed0]]></String>
           </Value>
         </Properties>
         <Properties>
@@ -278,6 +278,12 @@
           <Name><![CDATA[formatterSettings#contentcontainer]]></Name>
           <Value>
             <String><![CDATA[0b17fc85-330e-11e8-b78e-e5c82a707ed0]]></String>
+          </Value>
+        </Properties>
+        <Properties>
+          <Name><![CDATA[type]]></Name>
+          <Value>
+            <String><![CDATA[default]]></String>
           </Value>
         </Properties>
       </Elements>
